# ingle

./: Cargo.toml
ingle/: Cargo.toml
ingle-codegen/: Cargo.toml
ingle-codegen/src/: lib.rs
ingle-codegen/src/encodable_document/: input.rs  mod.rs
ingle-proc-macros/: Cargo.toml
ingle-proc-macros/src/: lib.rs
ingle/src/: document.rs  executors.rs  fields.rs  lib.rs  path.rs  paths.rs  refs.rs  requests.rs
ingle/src/connection/: auth.rs  mod.rs  service-account-test.json
ingle/src/database/: builder.rs  mod.rs
ingle/src/database/auth/: mod.rs  service.rs  token.rs
ingle/src/database/transactions/: executors.rs  mod.rs
ingle/src/google/: google.api.rs  google.firestore.v1.rs  mod.rs
ingle/src/operations/: add_document.rs  list_documents.rs  mod.rs  set_document.rs
ingle/src/values/: mod.rs
ingle/src/values/decode/: document.rs  mod.rs  value.rs
ingle/src/values/encode/: document.rs  document_encoder.rs  mod.rs  value.rs  value_encoder.rs
ingle/tests/: encodable_document.rs  integration.rs
proto/: fetch.sh
xtask/: Cargo.toml
xtask/src/: main.rs
