[package]
name = "ingle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
tonic = { version = "0.5.0", no-default-features = true, features = ["transport"] }

[dev-dependencies]
insta = "1.7.1"
maplit = "1.0.2"
tokio = { version = "1.9.0" }