[package]
name = "ingle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
frank_jwt = "3.1.2"
futures-core = "0.3"
futures-util = "0.3"
pin-project = "1"
prost = "0.8"
prost-types = "0.8"
serde = "1"
serde_json = "1.0.64"
thiserror = "1.0.26"
tower-service = "0.3"

[dependencies.tonic]
version = "0.5.0"
features = ["transport", "tls", "tls-roots"]

[dev-dependencies]
futures = "0.3"
insta = "1.7.1"
maplit = "1.0.2"
tokio = { version = "1.9.0" }